--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN"> <!-- -*-html-*- -->
 <html><head>
 <title>Test page</title>
-<link rev=made href="mailto:rezic@onlineoffice.de">
+<link rev=made href="mailto:slaven@rezic.de">
 </head>
 <body>
 This is a small html test page for WWWBrowser.pm
